combined a and b into C

--- a/playing-card.css
+++ b/playing-card.css
@@ -37,7 +37,7 @@
 }
 
 .card-back {
-  background: url('./card-back.png') center/cover no-repeat;
+  background: url('./assets/card-back.png') center/cover no-repeat;
   transform: rotateY(180deg);
 }
 
